<resources>
    <string name="app_name">BookIt</string>
    <string name="app_name_title">Book It</string>
    <string name="app_short_description">For customers and service providers</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Your email is your username</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Not registered? Register</string>
    <string name="action_finish">Finish</string>
    <string name="user_type_customer">I am a customer</string>
    <string name="user_type_provider">I am a service provider</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="profile_type_customer">"Customer"</string>
    <string name="profile_type_provider">"Service Provider"</string>
    <string name="profile_type">"Profile type"</string>
    <string name="business_type">"Business type"</string>

    <string-array name="businessType">
        <item>Hairdresser</item>
        <item>Cleaning worker</item>
        <item>Children care</item>
        <item>Therapist</item>
        <item>Photographer</item>
        <item>Other</item>
    </string-array>
</resources>
